# worm

./: .gitignore  CMakeLists.txt  README.md  aligned_tree.cc  aligned_tree.h  alignment_constructor.cc  alignment_constructor.h  alignment_heuristic.cc  alignment_heuristic.h  definitions.h  dictionary.cc  dictionary.h  distributed_rule_counts.cc  distributed_rule_counts.h  filter.cc  generate_alignments.cc  grammar.cc  grammar.h  heuristic.cc  lattice.cc  lattice.h  log_add.h  main.cc  multi_sample_reorderer.cc  multi_sample_reorderer.h  node.cc  node.h  pcfg_table.cc  pcfg_table.h  reorder_main.cc  reorderer.cc  reorderer.h  reorderer_base.h  restaurant.h  restaurant_process.h  restaurant_process_inl.h  rule_extractor.cc  rule_extractor.h  rule_matcher.cc  rule_matcher.h  (+19 more)
scripts/: convert-worm-to-cdec.pl  extract-terminals.pl  featurize-cdec-grammar.pl
